--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <link rel="icon" type="image/png" href="images/favicon-16x16.png" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" />
   </head>
   <body>
     <h1 class="primer_titulo">Mar y Facu</h1>
@@ -52,13 +52,13 @@
     <div class="galeria">
       <div class="contenedor">
         <article>
-          <img src="images/egreso2k24_1.jpeg" alt="" width="240" height="300" />
+          <img src="egreso2k24_1.jpeg" alt="" width="240" height="300" />
         </article>
       </div>
       <div class="contenedor">
         <article>
           <img
-            src="images/egreso2k23.jpg"
+            src="egreso2k23.jpg"
             alt=""
             width="252px"
             height="300px"
@@ -67,7 +67,7 @@
       </div>
       <div class="contenedor">
         <article>
-          <img src="images/anillos.jpeg" alt="" width="250" height="300" />
+          <img src="anillos.jpeg" alt="" width="250" height="300" />
         </article>
       </div>
     </div>
