--- a/index.html
+++ b/index.html
@@ -77,19 +77,32 @@
         <div class="txt">
           <h2>Un escrito mas en tu cajita (ahora virtual)</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi,
-            totam! Itaque cum ullam corporis consequatur, dicta, architecto
-            similique dolor commodi hic libero laborum, aliquam dolorem
-            necessitatibus voluptas vero cupiditate natus et! Dolorum nisi
-            provident consequatur voluptate eligendi eos ducimus quidem animi
-            facilis id, ut omnis a, voluptatibus molestiae nam culpa?
+            Feliz San Valentín bonita mia, linda, hermosa, preciosa, bella,
+            única, distínta, amor de mi vida.<br /><br />
+            Aunque ya pasaron las doce y técnicamente ya es quince, para mí,
+            cada día con vos es San Valentín. Porque todos los días celebro
+            nuestro amor, que es hermoso, único y especial. Porque sos el motivo
+            más grande por el que sigo en pie, la razón por la que tengo metas y
+            sueños. Sos quien me motiva a crecer, a avanzar. Aunque no lo creas,
+            sos el pilar más importante de mi vida.<br /><br />
+            No tengo más que agradecerte por estar. Vos, más que nadie, sabés
+            por lo que estoy pasando y, sinceramente, no se lo deseo a nadie.
+            Pero si hay algo que me mantiene firme es verte sonreír, porque tu
+            felicidad es la mía.<br /><br />
+            Las fotos si te das cuenta, definen lo que es nuestra pareja, somos
+            hermosos, jodones, nos encanta la música, y lo mas importante,
+            tenemos el mismo plan a futuro kjjj (que obvio espero que se
+            cumpla).<br /><br />
+            Espero que te haya gustado, la verdad es algo que se me ocurrió de
+            la nada, y dije, no se merece menos que algo bien creativo
+            jasjajsj.<br /><br /><br /><strong>Te amo muchisimo.</strong>
           </p>
         </div>
       </div>
     </div>
 
     <footer>
-      <p>Te amo hoy y siempre. Facu <span>14/02/2025</span></p>
+      <p>Facu  - 14/02/2025</span></p>
     </footer>
   </body>
 </html>
